Resolves fdo#46074: Fix Partial::contains for paths that go past a leaf node

Paths that already "failed" at the root node were not reported as CONTAINS_NOT,
so that they were erroneously migrated, but with broken content (values of set
member properties were nil).
(cherry picked from commit f3f79cc9e6c265baf48955d53f7e888205e0b3e0)

Signed-off-by: Caolán McNamara <caolanm@redhat.com>